--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img src="./images/action.png" alt="action">
           <div>
                <h3>microphone</h3>
-               <h5>$120.53</h5>
+               <h4>$120.53</h4>
                <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -79,11 +79,170 @@
                <p>Buyers protection possible!</p>
           </div>
      </div>
-
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/action.png" alt="action">
+          <div>
+               <h3>microphone</h3>
+               <h4>$120.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
 </div>
+<span><a href="">See More <i class="fas fa-arrow-right"></i></a></span>
+
 </section>
 
 <!----------------Popular Collection section End------------>
+
+<!----------------Footer section Start------------------>
+
+<footer>
+<div class="footer-content">
+<h1>Influencer products</h1>
+<p>Copyright © 2020  influencer products</p>
+<p>All rights reserved</p>
+<div class="social-icons">
+     <i class="fab fa-facebook"></i>
+     <i class="fab fa-instagram"></i>
+     <i class="fab fa-linkedin"></i>
+     <i class="fab fa-twitter-square"></i>
+     <i class="fab fa-youtube"></i>
+</div>
+</div>
+</footer>
+
+
+
+<!----------------Footer section End------------------>
+
 
 
 </body>
