--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
 <body>
 <!-------------------Navbar----------------->
 <nav>
-     <label for="logo">
+     <div>
           <h2>Influencer products</h2>
-     </label>
-     <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Products</a></li>
-          <li><a href="">Sign up</a></li>
-          <li><a href="">Log In</a></li>
-          <li><i class="fas fa-search"></i></li>
-          <li><i class="fas fa-cart-plus"></i></li>
-     </ul>
+     </div>
+     <div>
+          <ul>
+               <li><a href="">Home</a></li>
+               <li><a href="">Products</a></li>
+               <li><a href="">Sign up</a></li>
+               <li><a href="">Log In</a></li>
+               <li><i class="fas fa-search"></i></li>
+               <li><i class="fas fa-cart-plus"></i></li>
+          </ul>
+     </div>
 </nav>
 
 <!-------------------Header Start---------------->
@@ -221,6 +223,23 @@
 </section>
 
 <!----------------Popular Collection section End------------>
+
+<!----------------App Section Start------------>
+<section class="our-app">
+     <div class="app-image">
+          <img src="./images/app.png" alt="">
+     </div>
+     <div class="app-info">
+          <h1>Manage simply</h1>
+          <p>Control everything from a single dashboard with centralized inventory, order management, pricing, and more.</p>
+          <h4>№1 Fastest implementation e-commerce platform in 2022.</h4>
+          <p><a href="">Learn more</a></p>
+     </div>
+</section>
+
+
+<!----------------App Section End------------>
+
 
 <!----------------Footer section Start------------------>
 
