--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 </head>
 <body>
 <!-------------------Navbar----------------->
-<nav>
-     <div>
+<nav class="nav-bar">
           <h2>Influencer products</h2>
-     </div>
      <div>
           <ul>
                <li><a href="">Home</a></li>
@@ -40,8 +38,8 @@
 <header>
      <div class="header-text">
           <h1>Start your Journey as Influencer</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-          <a href="">Preebook now<i class="far fa-arrow-alt-circle-right"></i></a>
+          <p>I stumbled across your account and thought your content would be perfect for us. If you feel we’d make a good fit, I’d love to move forward and have you request products from our store.</p>
+          <p><a href="">Preebook now<i class="far fa-arrow-alt-circle-right"></i></a></p>
      </div>
      <div class="header-image">
           <img src="./images/main-camera.png" alt="main-camera">
@@ -52,23 +50,15 @@
 <!-------------------Header End----------------->
 
 
-<!----------------Logos section Start------------>
-<section>
-
-</section>
-
-<!----------------Logos section End------------->
-
-
 <!----------------Popular Collection section Start------------>
 <section>
 <h2>Popular Collection</h2>
 <div class="collections">
      <div class="collection-card">
-          <img src="./images/action.png" alt="action">
+          <img src="./images/tripod.png" alt="tripod">
           <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
+               <h3>Tripod</h3>
+               <h4>$110.53</h4>
                <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -84,7 +74,75 @@
      <div class="collection-card">
           <img src="./images/action.png" alt="action">
           <div>
-               <h3>microphone</h3>
+               <h3>GoPro</h3>
+               <h4>$150.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/airpod.png" alt="airpod">
+          <div>
+               <h3>Airpod</h3>
+               <h4>$90.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/camera.png" alt="camera">
+          <div>
+               <h3>Camera</h3>
+               <h4>$180.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/drone.png" alt="drone">
+          <div>
+               <h3>Drone</h3>
+               <h4>$170.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/gear.png" alt="gear">
+          <div>
+               <h3>Gear</h3>
                <h4>$120.53</h4>
                <div class="star">
                     <i class="fas fa-star"></i>
@@ -99,9 +157,26 @@
           </div>
      </div>
      <div class="collection-card">
-          <img src="./images/action.png" alt="action">
+          <img src="./images/lights.png" alt="lights">
           <div>
-               <h3>microphone</h3>
+               <h3>Lights</h3>
+               <h4>$105.53</h4>
+               <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+               </div>
+               <p>Wordwide shifting </p>
+               <p>available</p>
+               <p>Buyers protection possible!</p>
+          </div>
+     </div>
+     <div class="collection-card">
+          <img src="./images/single-light.png" alt="single-light">
+          <div>
+               <h3>Single light</h3>
                <h4>$120.53</h4>
                <div class="star">
                     <i class="fas fa-star"></i>
@@ -116,94 +191,9 @@
           </div>
      </div>
      <div class="collection-card">
-          <img src="./images/action.png" alt="action">
+          <img src="./images/mic.png" alt="mic">
           <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
-               <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-               </div>
-               <p>Wordwide shifting </p>
-               <p>available</p>
-               <p>Buyers protection possible!</p>
-          </div>
-     </div>
-     <div class="collection-card">
-          <img src="./images/action.png" alt="action">
-          <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
-               <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-               </div>
-               <p>Wordwide shifting </p>
-               <p>available</p>
-               <p>Buyers protection possible!</p>
-          </div>
-     </div>
-     <div class="collection-card">
-          <img src="./images/action.png" alt="action">
-          <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
-               <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-               </div>
-               <p>Wordwide shifting </p>
-               <p>available</p>
-               <p>Buyers protection possible!</p>
-          </div>
-     </div>
-     <div class="collection-card">
-          <img src="./images/action.png" alt="action">
-          <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
-               <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-               </div>
-               <p>Wordwide shifting </p>
-               <p>available</p>
-               <p>Buyers protection possible!</p>
-          </div>
-     </div>
-     <div class="collection-card">
-          <img src="./images/action.png" alt="action">
-          <div>
-               <h3>microphone</h3>
-               <h4>$120.53</h4>
-               <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-               </div>
-               <p>Wordwide shifting </p>
-               <p>available</p>
-               <p>Buyers protection possible!</p>
-          </div>
-     </div>
-     <div class="collection-card">
-          <img src="./images/action.png" alt="action">
-          <div>
-               <h3>microphone</h3>
+               <h3>Mic</h3>
                <h4>$120.53</h4>
                <div class="star">
                     <i class="fas fa-star"></i>
@@ -237,7 +227,6 @@
      </div>
 </section>
 
-
 <!----------------App Section End------------>
 
 
@@ -246,14 +235,14 @@
 <footer>
 <div class="footer-content">
 <h1>Influencer products</h1>
-<p>Copyright © 2020  influencer products</p>
+<p>Copyright © 2022  influencer products</p>
 <p>All rights reserved</p>
 <div class="social-icons">
-     <i class="fab fa-facebook"></i>
-     <i class="fab fa-instagram"></i>
-     <i class="fab fa-linkedin"></i>
-     <i class="fab fa-twitter-square"></i>
-     <i class="fab fa-youtube"></i>
+     <a href=""><i class="fab fa-facebook"></i></a>
+     <a href=""><i class="fab fa-instagram"></i></a>
+     <a href=""><i class="fab fa-twitter-square"></i></a>
+     <a href=""><i class="fab fa-youtube"></i></a>
+     <a href=""><i class="fab fa-linkedin"></i></a>
 </div>
 </div>
 </footer>
