All requirement fillup

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <!-------------------Navbar----------------->
 <nav class="nav-bar">
           <h2>Influencer products</h2>
-     <div>
           <ul>
                <li><a href="">Home</a></li>
                <li><a href="">Products</a></li>
@@ -31,9 +30,7 @@
                <li><i class="fas fa-search"></i></li>
                <li><i class="fas fa-cart-plus"></i></li>
           </ul>
-     </div>
 </nav>
-
 <!-------------------Header Start---------------->
 <header>
      <div class="header-text">
@@ -44,9 +41,7 @@
      <div class="header-image">
           <img src="./images/main-camera.png" alt="main-camera">
      </div>
-
 </header>
-
 <!-------------------Header End----------------->
 
 
@@ -208,10 +203,8 @@
           </div>
      </div>
 </div>
-<span><a href="">See More <i class="fas fa-arrow-right"></i></a></span>
-
+<div class="see-more"><a href="">See More <i class="fas fa-arrow-right"></i></a></div>
 </section>
-
 <!----------------Popular Collection section End------------>
 
 <!----------------App Section Start------------>
@@ -223,15 +216,27 @@
           <h1>Manage simply</h1>
           <p>Control everything from a single dashboard with centralized inventory, order management, pricing, and more.</p>
           <h4>№1 Fastest implementation e-commerce platform in 2022.</h4>
-          <p><a href="">Learn more</a></p>
+          <p><a href="">Learn more...</a></p>
      </div>
 </section>
-
 <!----------------App Section End------------>
 
+<!----------------Contact us Start------------>
+<section class="contact">
+     <form class="form">
+          <h2>CONTACT US</h2>
+          <p type="Name:"><input placeholder="Write your name here.."></input></p>
+          <p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
+          <p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
+          <button>Send Message</button>
+          <div>
+          </div>
+        </form>
+</section>
 
-<!----------------Footer section Start------------------>
+<!----------------Contact us End------------>
 
+<!----------Footer section Start------------->
 <footer>
 <div class="footer-content">
 <h1>Influencer products</h1>
@@ -247,11 +252,7 @@
 </div>
 </footer>
 
-
-
 <!----------------Footer section End------------------>
-
-
 
 </body>
 </html>
